project5/Project5/Parse/MiniJavaParser.java
/* MiniJavaParser.java */
/* Generated By:JavaCC: Do not edit this line. MiniJavaParser.java */
  package Parse;
  import java.util.LinkedList;
  public class MiniJavaParser implements MiniJavaParserConstants {

/********************/
/* MiniJava Grammar */
/********************/

// Goal 	::= 	MainClass ( ClassDeclaration | ThreadDeclaration )* <EOF>
  static final public Absyn.Program Goal() throws ParseException {LinkedList<Absyn.ClassDecl> cl = new LinkedList<Absyn.ClassDecl>();
 Absyn.ClassDecl cd;
    MainClassDeclaration(cl);
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 10:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      if (jj_2_1(2147483647)) {
        cd = ThreadDeclaration();
cl.add(cd);
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 10:{
          cd = ClassDeclaration();
cl.add(cd);
          break;
          }
        default:
          jj_la1[1] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    jj_consume_token(0);
{if ("" != null) return new Absyn.Program(cl);}
    throw new Error("Missing return statement in function");
}

// MainClass 	::= 	"class" Identifier "{" "public" "static" "void" "main" "(" "String" "[" "]" Identifier ")" "{" Statement "}" "}"
  static final public Absyn.ClassDecl MainClassDeclaration(LinkedList<Absyn.ClassDecl> cl) throws ParseException {Absyn.ClassDecl  cd;
 Absyn.Stmt stmt;
 Absyn.VarDecl var;
 Token name, arg;
 LinkedList<Absyn.MethodDecl> methods = new LinkedList<Absyn.MethodDecl>();
 LinkedList<Absyn.Formal> formals     = new LinkedList<Absyn.Formal>();
 LinkedList<Absyn.VarDecl> locals     = new LinkedList<Absyn.VarDecl>();
 LinkedList<Absyn.Stmt> stmts         = new LinkedList<Absyn.Stmt>();
    jj_consume_token(10);
    name = jj_consume_token(ID);
    jj_consume_token(37);
    jj_consume_token(11);
    jj_consume_token(12);
    jj_consume_token(22);
    jj_consume_token(45);
    jj_consume_token(39);
    jj_consume_token(46);
    jj_consume_token(41);
    jj_consume_token(42);
    arg = jj_consume_token(ID);
    jj_consume_token(40);
formals.add(new Absyn.Formal(
   new Absyn.ArrayType(
    new Absyn.IdentifierType("String")),
     arg.toString()));
    jj_consume_token(37);
    label_2:
    while (true) {
      if (jj_2_2(2147483647)) {
        ;
      } else {
        break label_2;
      }
      var = VarDeclaration();
locals.add(var);
    }
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 13:
      case 14:
      case 15:
      case 16:
      case 18:
      case 27:
      case 30:
      case 37:
      case 39:
      case 48:
      case 49:
      case 50:
      case INT:
      case STRING:
      case ID:{
        ;
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        break label_3;
      }
      stmt = Statement();
stmts.add(stmt);
    }
    jj_consume_token(38);
    jj_consume_token(38);
methods.add(new Absyn.MethodDecl(null, false, "main", formals,
    locals, stmts, new Absyn.IntegerLiteral(0)));
  cd = new Absyn.ClassDecl(name.toString(),
      null,
      new LinkedList<Absyn.VarDecl>(), methods);
  cl.add(cd);
  {if ("" != null) return cd;}
    throw new Error("Missing return statement in function");
}

  static final public Absyn.MethodDecl MethodDeclaration() throws ParseException {boolean synced = false;
 Absyn.Type retType;
 Token name;
 LinkedList<Absyn.Formal> formals = new LinkedList<Absyn.Formal>();
 LinkedList<Absyn.VarDecl> locals = new LinkedList<Absyn.VarDecl>();
 LinkedList<Absyn.Stmt> stmts = new LinkedList<Absyn.Stmt>();
 Absyn.Expr retVal;
 Absyn.Stmt stmt;
 Absyn.VarDecl var;
    jj_consume_token(11);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 20:{
      jj_consume_token(20);
synced = true;
      break;
      }
    default:
      jj_la1[3] = jj_gen;
      ;
    }
    retType = Type();
    name = jj_consume_token(ID);
    jj_consume_token(39);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 23:
    case 24:
    case ID:{
      FormalList(formals);
      break;
      }
    default:
      jj_la1[4] = jj_gen;
      ;
    }
    jj_consume_token(40);
    jj_consume_token(37);
    label_4:
    while (true) {
      if (jj_2_3(2147483647)) {
        ;
      } else {
        break label_4;
      }
      var = VarDeclaration();
locals.add(var);
    }
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 13:
      case 14:
      case 15:
      case 16:
      case 18:
      case 27:
      case 30:
      case 37:
      case 39:
      case 48:
      case 49:
      case 50:
      case INT:
      case STRING:
      case ID:{
        ;
        break;
        }
      default:
        jj_la1[5] = jj_gen;
        break label_5;
      }
      stmt = Statement();
stmts.add(stmt);
    }
    jj_consume_token(21);
    retVal = Expression();
    jj_consume_token(43);
    jj_consume_token(38);
{if ("" != null) return new Absyn.MethodDecl(retType, synced, name.toString(), formals, locals, stmts, retVal);}
    throw new Error("Missing return statement in function");
}

  static final public Absyn.ClassDecl ClassDeclaration() throws ParseException {Token name, parent = null;
 Absyn.VarDecl field;
 Absyn.MethodDecl m;
 LinkedList<Absyn.VarDecl> fields = new LinkedList<Absyn.VarDecl>();
 LinkedList<Absyn.MethodDecl> methods = new LinkedList<Absyn.MethodDecl>();
    jj_consume_token(10);
    name = jj_consume_token(ID);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 19:{
      jj_consume_token(19);
      parent = jj_consume_token(ID);
      break;
      }
    default:
      jj_la1[6] = jj_gen;
      ;
    }
    jj_consume_token(37);
    label_6:
    while (true) {
      if (jj_2_4(2147483647)) {
        ;
      } else {
        break label_6;
      }
      field = VarDeclaration();
fields.add(field);
    }
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 11:{
        ;
        break;
        }
      default:
        jj_la1[7] = jj_gen;
        break label_7;
      }
      m = MethodDeclaration();
methods.add(m);
    }
    jj_consume_token(38);
{if ("" != null) return new Absyn.ClassDecl(name.toString(),
    (parent == null ? null : parent.toString()),
    fields, methods);}
    throw new Error("Missing return statement in function");
}

  static final public Absyn.ClassDecl ThreadDeclaration() throws ParseException {Token name;
 Absyn.VarDecl field;
 Absyn.MethodDecl m;
 LinkedList<Absyn.VarDecl> fields = new LinkedList<Absyn.VarDecl>();
 LinkedList<Absyn.MethodDecl> methods = new LinkedList<Absyn.MethodDecl>();
    jj_consume_token(10);
    name = jj_consume_token(ID);
    jj_consume_token(19);
    jj_consume_token(47);
    jj_consume_token(37);
    label_8:
    while (true) {
      if (jj_2_5(2147483647)) {
        ;
      } else {
        break label_8;
      }
      field = VarDeclaration();
fields.add(field);
    }
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 11:{
        ;
        break;
        }
      default:
        jj_la1[8] = jj_gen;
        break label_9;
      }
      m = ThreadMethodDeclaration();
methods.add(m);
    }
    jj_consume_token(38);
{if ("" != null) return new Absyn.ThreadDecl(name.toString(), "Thread", fields, methods);}
    throw new Error("Missing return statement in function");
}

  static final public Absyn.MethodDecl ThreadMethodDeclaration() throws ParseException {boolean synced = false;
 Absyn.Type retType;
 Token name;
 LinkedList<Absyn.Formal> formals = new LinkedList<Absyn.Formal>();
 LinkedList<Absyn.Stmt> stmts = new LinkedList<Absyn.Stmt>();
 LinkedList<Absyn.VarDecl> locals = new LinkedList<Absyn.VarDecl>();
 Absyn.Expr retVal;
 Absyn.Stmt stmt;
 Absyn.VarDecl var;
    jj_consume_token(11);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 20:{
      jj_consume_token(20);
synced = true;
      break;
      }
    default:
      jj_la1[9] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 22:{
      jj_consume_token(22);
      name = jj_consume_token(ID);
      jj_consume_token(39);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 23:
      case 24:
      case ID:{
        FormalList(formals);
        break;
        }
      default:
        jj_la1[10] = jj_gen;
        ;
      }
      jj_consume_token(40);
      jj_consume_token(37);
      label_10:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 13:
        case 14:
        case 15:
        case 16:
        case 18:
        case 27:
        case 30:
        case 37:
        case 39:
        case 48:
        case 49:
        case 50:
        case INT:
        case STRING:
        case ID:{
          ;
          break;
          }
        default:
          jj_la1[11] = jj_gen;
          break label_10;
        }
        stmt = Statement();
stmts.add(stmt);
      }
      jj_consume_token(38);
{if ("" != null) return new Absyn.VoidDecl(name.toString(), formals, stmts);}
      break;
      }
    case 23:
    case 24:
    case ID:{
      retType = Type();
      name = jj_consume_token(ID);
      jj_consume_token(39);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 23:
      case 24:
      case ID:{
        FormalList(formals);
        break;
        }
      default:
        jj_la1[12] = jj_gen;
        ;
      }
      jj_consume_token(40);
      jj_consume_token(37);
      label_11:
      while (true) {
        if (jj_2_6(2147483647)) {
          ;
        } else {
          break label_11;
        }
        var = VarDeclaration();
locals.add(var);
      }
      label_12:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 13:
        case 14:
        case 15:
        case 16:
        case 18:
        case 27:
        case 30:
        case 37:
        case 39:
        case 48:
        case 49:
        case 50:
        case INT:
        case STRING:
        case ID:{
          ;
          break;
          }
        default:
          jj_la1[13] = jj_gen;
          break label_12;
        }
        stmt = Statement();
stmts.add(stmt);
      }
      jj_consume_token(21);
      retVal = Expression();
      jj_consume_token(43);
      jj_consume_token(38);
{if ("" != null) return new Absyn.MethodDecl(retType, synced, name.toString(), formals, locals, stmts, retVal);}
      break;
      }
    default:
      jj_la1[14] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  static final public void FormalList(LinkedList<Absyn.Formal> formals) throws ParseException {Absyn.Type t;
 Token n;
    t = Type();
    n = jj_consume_token(ID);
formals.add(new Absyn.Formal(t, n.toString()));
    label_13:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 44:{
        ;
        break;
        }
      default:
        jj_la1[15] = jj_gen;
        break label_13;
      }
      jj_consume_token(44);
      t = Type();
      n = jj_consume_token(ID);
formals.add(new Absyn.Formal(t, n.toString()));
    }
}

// VarDeclaration 	::= 	Type Identifier ( = Expression )? ";"
  static final public Absyn.VarDecl VarDeclaration() throws ParseException {Absyn.Type type = null;
 Token      name = null;
 Absyn.Expr init = null;
    type = Type();
    name = jj_consume_token(ID);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 26:{
      jj_consume_token(26);
      init = Expression();
      break;
      }
    default:
      jj_la1[16] = jj_gen;
      ;
    }
    jj_consume_token(43);
{if ("" != null) return new Absyn.VarDecl(type, name.toString(), init);}
    throw new Error("Missing return statement in function");
}

  static final public Absyn.Type Type() throws ParseException {Absyn.Type type;
    type = BaseType();
    label_14:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 41:{
        ;
        break;
        }
      default:
        jj_la1[17] = jj_gen;
        break label_14;
      }
      jj_consume_token(41);
      jj_consume_token(42);
type = new Absyn.ArrayType(type);
    }
{if ("" != null) return type;}
    throw new Error("Missing return statement in function");
}

  static final public Absyn.Type BaseType() throws ParseException {Token name;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 23:{
      jj_consume_token(23);
{if ("" != null) return new Absyn.IntegerType();}
      break;
      }
    case 24:{
      jj_consume_token(24);
{if ("" != null) return new Absyn.BooleanType();}
      break;
      }
    case ID:{
      name = jj_consume_token(ID);
{if ("" != null) return new Absyn.IdentifierType(name.toString());}
      break;
      }
    default:
      jj_la1[18] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  static final public Absyn.Stmt Statement() throws ParseException {Absyn.Stmt stmt, thenStmt, elseStmt, body;
 LinkedList<Absyn.Stmt> stmts;
 Absyn.Expr target, value, cond;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 37:{
      jj_consume_token(37);
stmts = new LinkedList<Absyn.Stmt>();
      label_15:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 13:
        case 14:
        case 15:
        case 16:
        case 18:
        case 27:
        case 30:
        case 37:
        case 39:
        case 48:
        case 49:
        case 50:
        case INT:
        case STRING:
        case ID:{
          ;
          break;
          }
        default:
          jj_la1[19] = jj_gen;
          break label_15;
        }
        stmt = Statement();
stmts.add(stmt);
      }
      jj_consume_token(38);
{if ("" != null) return new Absyn.BlockStmt(stmts);}
      break;
      }
    case 16:{
      jj_consume_token(16);
      jj_consume_token(39);
      cond = Expression();
      jj_consume_token(40);
      thenStmt = Statement();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 17:{
        jj_consume_token(17);
        elseStmt = Statement();
{if ("" != null) return new Absyn.IfStmt(cond, thenStmt, elseStmt);}
        break;
        }
      default:
        jj_la1[20] = jj_gen;
{if ("" != null) return new Absyn.IfStmt(cond, thenStmt, null);}
      }
      break;
      }
    case 18:{
      jj_consume_token(18);
      jj_consume_token(39);
      cond = Expression();
      jj_consume_token(40);
      body = Statement();
{if ("" != null) return new Absyn.WhileStmt(cond, body);}
      break;
      }
    default:
      jj_la1[21] = jj_gen;
      if (jj_2_7(2147483647)) {
        target = PrimaryExpression();
        jj_consume_token(26);
        value = Expression();
        jj_consume_token(43);
{if ("" != null) return new Absyn.AssignStmt(target, value);}
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 48:{
          stmt = XinuCallStatement();
{if ("" != null) return stmt;}
          break;
          }
        default:
          jj_la1[22] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    throw new Error("Missing return statement in function");
}

  static final public Absyn.XinuCallStmt XinuCallStatement() throws ParseException {Token method;
 Absyn.Expr arg;
 LinkedList<Absyn.Expr> args = new LinkedList<Absyn.Expr>();
    jj_consume_token(48);
    jj_consume_token(25);
    method = jj_consume_token(ID);
    jj_consume_token(39);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 13:
    case 14:
    case 15:
    case 27:
    case 30:
    case 39:
    case 48:
    case 49:
    case 50:
    case INT:
    case STRING:
    case ID:{
      arg = Expression();
args.add(arg);
      label_16:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 44:{
          ;
          break;
          }
        default:
          jj_la1[23] = jj_gen;
          break label_16;
        }
        jj_consume_token(44);
        arg = Expression();
args.add(arg);
      }
      break;
      }
    default:
      jj_la1[24] = jj_gen;
      ;
    }
    jj_consume_token(40);
    jj_consume_token(43);
{if ("" != null) return new Absyn.XinuCallStmt(method.toString(), args);}
    throw new Error("Missing return statement in function");
}

  static final public Absyn.Expr Expression() throws ParseException {Absyn.Expr first, second;
    first = RelExpression();
    label_17:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 32:{
        ;
        break;
        }
      default:
        jj_la1[25] = jj_gen;
        break label_17;
      }
      jj_consume_token(32);
      second = RelExpression();
first = new Absyn.AndExpr(first, second);
    }
{if ("" != null) return first;}
    throw new Error("Missing return statement in function");
}

  static final public Absyn.Expr RelExpression() throws ParseException {Absyn.Expr first, second;
    first = AddExpression();
    label_18:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 31:
      case 33:
      case 34:
      case 35:{
        ;
        break;
        }
      default:
        jj_la1[26] = jj_gen;
        break label_18;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 31:{
        jj_consume_token(31);
        second = AddExpression();
first = new Absyn.LesserExpr(first, second);
        break;
        }
      case 33:{
        jj_consume_token(33);
        second = AddExpression();
first = new Absyn.GreaterExpr(first, second);
        break;
        }
      case 34:{
        jj_consume_token(34);
        second = AddExpression();
first = new Absyn.EqualExpr(first, second);
        break;
        }
      case 35:{
        jj_consume_token(35);
        second = AddExpression();
first = new Absyn.NotEqExpr(first, second);
        break;
        }
      default:
        jj_la1[27] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
{if ("" != null) return first;}
    throw new Error("Missing return statement in function");
}
